geode new command