@@ -30,6 +30,8 @@
                 <buildArgs>
                   <buildArg>--enable-url-protocols=http,https</buildArg>
                   <buildArg>-Os</buildArg>
+                  <buildArg>-H:IncludeResources=defaultTemplate.zip|minimalTemplate.zip|consoleui_messages.*</buildArg>
+                  <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                 </buildArgs>
               </configuration>
             </plugin>
@@ -51,6 +53,16 @@
         <groupId>org.eclipse.jgit</groupId>
         <artifactId>org.eclipse.jgit</artifactId>
         <version>4.6.0.201612231935-r</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jline</groupId>
+        <artifactId>jline</artifactId>
+        <version>3.30.6</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jline</groupId>
+        <artifactId>jline-console-ui</artifactId>
+        <version>3.30.6</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId> <!-- to remove jgit warning -->
